<resources>
    <string name="app_name">MyAccelerometer</string>

    <string name="txt_navigation">Riwayat Navigasi</string>
    <string name="txt_navigation_up">Atas</string>
    <string name="txt_navigation_down">Bawah</string>
    <string name="txt_navigation_left">Kiri</string>
    <string name="txt_navigation_right">Kanan</string>
    <string name="txt_axis">Sumbu</string>
    <string name="txt_axis_x">X: %1$f</string>
    <string name="txt_axis_y">Y: %1$f</string>
    <string name="txt_axis_z">Z: %1$f</string>
    <string name="txt_illustration">Ilustrasi</string>
</resources>
