<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_navigation" />

        <ListView
            android:id="@+id/listNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_axis" />

        <TextView
            android:id="@+id/txtAxisX"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_axis_x" />

        <TextView
            android:id="@+id/txtAxisY"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_axis_y" />

        <TextView
            android:id="@+id/txtAxisZ"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_axis_z" />

        <TextView
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/txt_illustration" />

        <ImageView
            android:id="@+id/imgNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_up" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
